@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.1.10-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-01-10 16:49:43, took 00:19:08, with 50 workers, on 4208 cases, 1 failed, 0 traces, 15 retries
+-;-;-;2026-01-10 18:19:56, took 00:12:38, with 50 workers, on 4208 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -1172,7 +1172,7 @@ http://sources.freertr.org/cfg/crypt-wireguard01.tst;crypt-wireguard01.tst;succe
 http://sources.freertr.org/cfg/crypt-wireguard02.tst;crypt-wireguard02.tst;success;wireguard over ipv6
 http://sources.freertr.org/cfg/crypt-wireguard03.tst;crypt-wireguard03.tst;success;wireguard over wireguard
 http://sources.freertr.org/cfg/crypt-wireguard04.tst;crypt-wireguard04.tst;success;wireguard over loopback
-http://sources.freertr.org/cfg/crypt-wireguard05.tst;crypt-wireguard05.tst;#6-run-r1 tping 100 10 2.2.2.2 vrf v1;wireguard over asymmetric ports
+http://sources.freertr.org/cfg/crypt-wireguard05.tst;crypt-wireguard05.tst;success;wireguard over asymmetric ports
 http://sources.freertr.org/cfg/demo01.tst;demo01.tst;success;empty demo network
 http://sources.freertr.org/cfg/demo02.tst;demo02.tst;success;addressed demo network
 http://sources.freertr.org/cfg/intop0-atmdxi01.tst;intop0-atmdxi01.tst;success;interop0: atmdxi snap
