@@ -17871,3 +17871,6 @@ qc pass: iou serial demultiplexer
 ---------------------------------- 2026-01-10 16:30:35 26.1.10
 no qc pass: wireguard over asymmetric ports
 failed: wireguard over asymmetric ports
+---------------------------------- 2026-01-10 18:07:18 26.1.10
+no failed: wireguard over asymmetric ports
+qc pass: wireguard over asymmetric ports
